--- a/guides/index.html
+++ b/guides/index.html
@@ -45,7 +45,7 @@
 <dt><a href="middleware.html">Middleware</a></dt>
 <dd><p>Reusable HTTP middleware.</p></dd>
 <dt><a href="csrf.html">CSRF Protection</a></dt>
-<dd><p>Cross-site request forgery helpers and middleware.</p></dd>
+<dd><p>Built-in Go 1.25 cross-origin protections and middleware configuration.</p></dd>
 <dt><a href="session.html">Session</a></dt>
 <dd><p>Session helpers and authentication.</p></dd>
 </dl>
