--- a/guides/middleware.html
+++ b/guides/middleware.html
@@ -30,9 +30,9 @@
 <p>The default project includes two middlewares located in <code>app/middleware/</code>:</p>
 <ul>
 <li><strong>LoggingMiddleware</strong> – records each request's method, path and response status via the structured logger.</li>
-<li><strong>CSRFMiddleware</strong> – protects against cross-site request forgery by verifying tokens on mutating requests and responding with <code>403 Forbidden</code> when validation fails.</li>
+            <li><strong>CSRFMiddleware</strong> – blocks unsafe cross-origin browser requests using Go 1.25&rsquo;s <code>net/http.CrossOriginProtection</code> and returns <code>403 Forbidden</code> when a request is denied.</li>
 </ul>
-<p>These are composed in <code>routes.InitServerHandler</code> so that every request is logged and checked for a valid CSRF token:</p>
+<p>These are composed in <code>routes.InitServerHandler</code> so that every request is logged and evaluated for cross-origin safety:</p>
 <pre><code class="highlight go"><span class="variable">logged</span> <span class="operator">:=</span> <span class="function">middleware</span>.<span class="function">LoggingMiddleware</span>(<span class="variable">mux</span>)
 <span class="variable">csrfProtected</span> <span class="operator">:=</span> <span class="function">middleware</span>.<span class="function">CSRFMiddleware</span>(<span class="variable">logged</span>)
 <span class="keyword">return</span> <span class="variable">csrfProtected</span></code></pre>
